--- a/HW08/CMakeLists.txt
+++ b/HW08/CMakeLists.txt
@@ -3,4 +3,5 @@ project(HW08)
 
 # Generate two executables associated with the ME459 HW08
 add_executable(task1 task1.c)
-# add_executable(task2 generator.c driver2.c collide.c)
+add_executable(task2 generator.c driver2.c collide.c)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lm")
