--- a/HW10/CMakeLists.txt
+++ b/HW10/CMakeLists.txt
@@ -4,3 +4,4 @@ project(HW10)
 # Generate two executables associated with ME459 HW10
 add_executable(task1a task1a.c)
 add_executable(task1b task1b.c)
+add_executable(task3 task3.c)
