--- a/FinalProject459/CMakeLists.txt
+++ b/FinalProject459/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.8)
 project(FinalProject)
 
 # Generate the executable associated with the ME459 Final Project
-add_executable(final driver.c mesh.c spheres.c)
+add_executable(final driver.c collide.c spheres.c mesh.c output.c)
 
 # Set necessary GCC compiler flags
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lm")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
