Reworked program output handling by removing data_out entirely
This changes makes it now impossible to time just the collision detection, as the program now outputs to file within the collide_all function. However, there is no longer any worry about the possiblity of a segmentation fault caused by the allocation of memory to pairs array, as we have bypassed this process entirely. This makes the program much more robust and prevents it from being limited in collision detection

--- a/FinalProject459/CMakeLists.txt
+++ b/FinalProject459/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.8)
 project(FinalProject)
 
 # Generate the executable associated with the ME459 Final Project
-add_executable(final driver.c collide.c spheres.c mesh.c output.c)
+add_executable(final driver.c collide.c spheres.c mesh.c)
 
 # Set necessary GCC compiler flags
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
